fixed whitespace

--- a/css/app.css
+++ b/css/app.css
@@ -89,7 +89,6 @@ header {
 }
 
 header article {
-	letter-: 3px;
 	font-weight: bold;
 	font-size: 35px;
 	padding-top: 10px;
